= Version 4.0.0 Beta 3
== Box Labels
* [UPDATE] BarTender now is closed after every label processing. This is by design; BarTender is loaded into memory so it won't take as long to print as if it were completely shut down.
* [BUG] Green Seattle Met labels should now print.

== About Window
* [UPDATE] Now both the Change Log and About tabs display formatted text.

== Batch Maker

--

= Version 4.0.0 Beta 2
== Box Labels
* [UPDATE] Shortcut keys have been added:
# Ctrl+M - Current Month
# Ctrl+N - Next Month
# Ctrl+Y - Current Year
# Ctrl+D - Delete all in the current entry field
# Up/Down - Traverses through the fields
# Enter - Same as Tabbing

--

= Version 4.0.0 Beta 1
== Notes
* [Overview] The Box Label program has been incorporated into two other pieces of software, and is now a 'module'. Efficiency Assist is now the name of this program.
== Box Labels
* [BUG] Seattle Met labels should behave as expected. The current work around of adding text (or a space) into the 5th line should not be needed now.
* [UPDATE] The ability to classify what a shipment is (Freight/UPS Import) has been added, but currently doesn't do anything. In the future this will be printed on the breakdown report.

--

= Version 3.0.4 (April 2013)
== Notes
* [BUG] Fixed issue where PackingType for USPS was incomplete. (MediumFlatRate instead of MediumFlatRateBox)
* [UPDATE] Depending on the ship via code, EA will assign the correct PackingType. (Flat vs MediumFlatRateBox)

--

= Version 3.0.2 (December 2012)
== Notes
* Priority Mail will now have their packing type automatically inserted. Please NOTE that this could cause issues if we are sending a different type of package!!

= Version 3.0.1 (November 2012)
== Notes
* Fixed issue with canadian zip codes that have a space in them. All zips are now 'cleansed', of hyphens and spaces.

--

= Version 3.0 (May 2012 - October 2012)
== Notes
* Beta 5 has been renamed to Version 3.0
